#
# Copyright 2018 Guolian Zhang.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

add_subdirectory(curl)
add_subdirectory(http)
add_subdirectory(timer)
add_subdirectory(bind)
add_subdirectory(async)
add_subdirectory(sql)
add_subdirectory(base)
add_subdirectory(logs)
add_subdirectory(rpc)
add_subdirectory(args)
add_subdirectory(errors)
add_subdirectory(reflect)